# ATA-AI-Doc-Manager

./: .gitignore  AGENTS.md  API_ENDPOINTS.md  ARCHITECTURE.md  FRONTEND_BACKEND_GUIDE.md  QUICK_SETUP.md  README.md  business_flows.md  package-lock.json  package.json
AI-Doc-Manager/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  dms_backend.db  docker-compose.yml  pyproject.toml  run_dev.sh  setup_db.py
AI-Doc-Manager/backend/.chroma_data/: chroma.sqlite3
AI-Doc-Manager/backend/app/: main.py
AI-Doc-Manager/backend/app/alembic/: env.py
AI-Doc-Manager/backend/app/alembic/versions/: 00000001_0001_initial_schema.py  00000003_0003_user_identity_columns.py  20260420_0001_initial_schema.py  20260423_0002_add_reviews_and_approvals.py  20260501_0003_document_management_fields.py  20260507_0003_add_firebase_user_fields.py  20260508_0004_merge_document_and_firebase_heads.py  20260614_0005_reconcile_document_vector_fields.py  20260701_0005_add_document_chunks_table.py  afd97b52b285_add_runbooks_table.py
AI-Doc-Manager/backend/app/core/: config.py  db.py  dependencies.py  exceptions.py  logging.py  security.py
AI-Doc-Manager/backend/app/modules/: model_registry.py
AI-Doc-Manager/backend/app/modules/documents/api/: router.py  schemas.py
AI-Doc-Manager/backend/app/modules/documents/application/: services.py
AI-Doc-Manager/backend/app/modules/documents/domain/: chunk_model.py  models.py
AI-Doc-Manager/backend/app/modules/documents/infrastructure/: minio_adapter.py
AI-Doc-Manager/backend/app/modules/generate/: __init__.py
AI-Doc-Manager/backend/app/modules/generate/api/: __init__.py
AI-Doc-Manager/backend/app/modules/generate/application/: __init__.py  services.py
AI-Doc-Manager/backend/app/modules/iam/api/: admin_router.py  admin_schemas.py  router.py  schemas.py
AI-Doc-Manager/backend/app/modules/iam/application/: seed.py  services.py
AI-Doc-Manager/backend/app/modules/iam/domain/: models.py  password_policy.py  permissions.py  principal.py
AI-Doc-Manager/backend/app/modules/qa/: __init__.py
AI-Doc-Manager/backend/app/modules/qa/api/: __init__.py  (+2 more)
AI-Doc-Manager/backend/app/modules/runbooks/: __init__.py
AI-Doc-Manager/backend/app/modules/vectorization/: __init__.py
AI-Doc-Manager/backend/app/shared/: enums.py  interfaces.py  schemas.py  task_publisher.py  utils.py
AI-Doc-Manager/backend/app/shared/adapters/: chroma_vector_adapter.py  factory.py  gcs_storage_adapter.py  google_ai_llm_adapter.py  minio_storage_adapter.py  vertex_ai_llm_adapter.py  vertex_vector_adapter.py
AI-Doc-Manager/backend/app/tests/: conftest.py
AI-Doc-Manager/backend/app/tests/integration/: test_auth.py  test_documents.py  test_permissions.py  test_reviews_and_approvals.py  test_runbooks.py  test_system.py
AI-Doc-Manager/backend/app/tests/unit/: test_security.py  test_text_chunker.py  test_text_extractor.py
AI-Doc-Manager/backend/scripts/: run_migrations.py  seed.py  setup_rag_engine.py
AI-Doc-Manager/backend/tests/unit/adapters/: test_gcs_storage_adapter.py  test_vertex_vector_adapter.py
AI-Doc-Manager/backend/tests/unit/documents/: test_approve_document.py  test_document_urls.py
AI-Doc-Manager/backend/tests/unit/iam/: test_password_policy.py  test_password_services.py
AI-Doc-Manager/backend/tests/unit/shared/: test_rag_engine_adapter.py  test_task_publisher.py  test_worker_auth.py
(+290 files in other folders)
