[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dms-backend-foundation"
version = "0.1.0"
description = "Minimal FastAPI backend foundation for a document management system."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.29,<1",
  "bcrypt>=4,<5",
  "cloud-sql-python-connector>=1.20,<2",

  "fastapi>=0.115,<1",

  "google-adk>=2,<3",
  "google-cloud-aiplatform>=1,<2",
  "google-cloud-documentai>=3,<4",
  "google-cloud-error-reporting>=1,<2",
  "google-cloud-logging>=3,<4",
  "google-cloud-secret-manager>=2,<3",
  "google-cloud-storage>=3,<4",
  "google-cloud-tasks>=2,<3",
  "google-genai>=2,<3",

  "psycopg[binary]>=3,<4",

  "pydantic-settings>=2,<3",

  "PyJWT>=2,<3",

  "python-multipart>=0.0,<1",

  "sqlalchemy>=2,<3",

  "uvicorn[standard]>=0.49,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
norecursedirs = [".pytest_cache", "pytest-cache-files-*"]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<10",
  "pytest-asyncio>=1,<2",
]